<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:screenOrientation="portrait"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.mathematicstest.MainActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/questionOne" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/questionOne_resultOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionOne_radioButtonOne" />

            <RadioButton
                android:id="@+id/questionOne_resultTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/questionOne_radioButtonTwo" />

            <RadioButton
                android:id="@+id/questionOne_resultThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/questionOne_radioButtonThree" />

            <RadioButton
                android:id="@+id/questionOne_resultFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="35dp"
                android:text="@string/questionOne_radioButtonFour" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/questionTwo" />

            <CheckBox
                android:id="@+id/questionTwo_resultOne"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo_checkBoxOne" />

            <CheckBox
                android:id="@+id/questionTwo_resultTwo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo_checkBoxTwo" />

            <CheckBox
                android:id="@+id/questionTwo_resultThree"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo_checkBoxThree" />

            <CheckBox
                android:id="@+id/questionTwo_resultFour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionTwo_checkBoxFour" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/questionThree" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/questionThree_resultOne"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/questionThree_radioButtonOne" />

                <RadioButton
                    android:id="@+id/questionThree_resultTwo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/questionThree_radioButtonTwo" />

                <RadioButton
                    android:id="@+id/questionThree_resultThree"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/questionThree_radioButtonThree" />

                <RadioButton
                    android:id="@+id/questionThree_resultFour"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="35dp"
                    android:text="@string/questionThree_radioButtonFour" />
            </RadioGroup>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/questionFour" />

                <RadioGroup
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/questionFour_resultOne"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/questionFour_radioButtonOne" />

                    <RadioButton
                        android:id="@+id/questionFour_resultTwo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:text="@string/questionFour_radioButtonTwo" />

                    <RadioButton
                        android:id="@+id/questionFour_resultThree"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:text="@string/questionFour_radioButtonThree" />

                    <RadioButton
                        android:id="@+id/questionFour_resultFour"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="35dp"
                        android:text="@string/questionFour_radioButtonFour" />
                </RadioGroup>

            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/questionFive" />

            <EditText
                android:id="@+id/questionFive_editText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:onClick="submitOrder"
            android:text="@string/Submit" />
    </LinearLayout>

</ScrollView>
